:art: Creates documentation for the api
